# PI-3ano-Django

./: .env_exemplo  .gitignore  db.sqlite3  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_rename_descricao_livro_titulo.py  0002_rename_dia_emprestimo_final_emprestimo_contato_and_more.py  0003_emprestimo_nome_livro.py  0003_livro_autores_livro_categoria_livro_editora_and_more.py  0004_categoria_alter_livro_categoria.py  0004_remove_emprestimo_nome_livro.py  0005_emprestimo_nome_livro.py  0005_livro_capa.py  0006_remove_livro_categoria_livro_categoria.py  0007_autor_editora_remove_livro_autores_and_more.py  0008_localização_usuario_alter_autor_options_and_more.py  0009_carrinho.py  0010_itenscarrinho.py  0011_devolucao_emprestimo_remove_livro_devolucao_and_more.py
livraria/models/: __init__.py  autor.py  carrinho.py  categoria.py  devolucao.py  editora.py  emprestimo.py  livro.py  localizacao.py  usuario.py
livraria/serializers/: __init__.py  autor.py  categoria.py  devolucao.py  editora.py  emprestimo.py  livro.py  localizacao.py
livraria/views/: __init__.py  autor.py  categoria.py  devolucao.py  editora.py  emprestimo.py  livro.py  localizacao.py
media/images/: 240f2d54-c1b8-459c-b751-938bf9f7fed6  255f32ed-85b8-4201-9319-0e04016e15df  756d7596-4184-4ee9-897c-51c5dd48f4df
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
