
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Davi Gabriel Tomaz", email = "davigabtomaz@gmail.com"},
]
dependencies = [
    "django>=4.2.5",
    "djangorestframework>=3.14.0",
    "python-magic>=0.4.27",
    "Pillow>=10.0.0",
    "setuptools>=68.1.2",
    "drf-spectacular>=0.26.4",
    "django-cors-headers>=4.2.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "whitenoise[brotli]>=6.5.0",
    "psycopg2-binary>=2.9.7",
    "django-cloudinary-storage>=0.3.0",
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "isort>=5.12.0",
]

[[tool.pdm.autoexport]]
filename = "requirements.txt"
without-hashes = "true"


